--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
     ],
     "require": {
         "php": "^8.2",
-        "symfony/framework-bundle": "^6.4 || ^7.0",
-        "symfony/http-client": "^6.4 || ^7.0"
+        "symfony/framework-bundle": "^6.4 || ^7.0 || ^8.0",
+        "symfony/http-client": "^6.4 || ^7.0 || ^8.0"
     },
     "minimum-stability": "stable",
     "autoload": {
